исправлены размеры картинок

--- a/blocks/intro/__card/intro__card.css
+++ b/blocks/intro/__card/intro__card.css
@@ -1,11 +1,10 @@
 .intro__card {
-  width: 68%;
-  min-height: 428px;
+  max-width: 690px;
 }
 
 @media screen and (max-width: 999px) {
   .intro__card {
-    width: 100%;
+    max-width: 690px;
   }
 }
 
