--- a/blocks/photo-grid/__template/photo-grid__template.css
+++ b/blocks/photo-grid/__template/photo-grid__template.css
@@ -1,6 +1,7 @@
 .photo-grid__template {
   position: relative;
-  width: 100%;
+  max-width: 100%;
+  height: 100%;
   list-style: none;
   padding: 0;
   display: grid;
