--- a/blocks/photo-grid/__template/photo-grid__template.css
+++ b/blocks/photo-grid/__template/photo-grid__template.css
@@ -14,6 +14,7 @@
   .photo-grid__template {
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 14px;
   }
 }
 
@@ -21,6 +22,7 @@
   .photo-grid__template {
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: 16px;
   }
 }
 
