--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -8,21 +8,22 @@
 
 .intro {
   position: relative;
-  max-width: 984px;
-  margin: 0 auto;
+  max-width: 690px;
+  margin: 0 auto 0 148px;
 }
 
 
 @media screen and (max-width: 1100px) {
   .intro {
     width: 100%;
-    padding: 0 48px;
+    margin: 0 auto 0 48px;
   }
 }
 
 @media screen and (max-width: 999px) {
   .intro {
-    width: 100%;
+    max-width: 720px;
+    margin:0;
     padding: 0 24px;
   }
 }
@@ -30,6 +31,7 @@
 @media screen and (max-width: 665px) {
   .intro {
     width: 100%;
+    margin:0;
     padding: 0 16px;
   }
 }
@@ -37,6 +39,7 @@
 @media screen and (max-width: 470px) {
   .intro {
     width: 100%;
+    margin:0;
     padding: 0 16px;
   }
 }
