--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,21 +2,21 @@
 
 .places {
   position: relative;
-  width: 80%;
-  padding: 0;
-  margin: 0 auto;
+  max-width: 80%;
+  margin: 0 148px;
 }
 
 @media screen and (max-width: 1100px) {
   .places {
-    width: 100%;
-    padding: 0 48px;
+    max-width: 100%;
+    margin: 0 48px;
   }
 }
 
 @media screen and (max-width: 999px) {
   .places {
     width: 100%;
+    margin:0;
     padding: 0 24px;
   }
 }
@@ -24,6 +24,7 @@
 @media screen and (max-width: 665px) {
     .places {
       width: 100%;
+      margin:0;
       padding: 0 16px;
     }
   }
