--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -26,25 +26,25 @@
     width: 100%;
     transition: background-color 0.2s linear;
   }
-  
+
   .cover__link:hover::after {
     background-color: rgba(42, 44, 47, 0.8);
     cursor: pointer;
     z-index: 1;
   }
-  
+
   @media screen and (max-width: 1100px) {
     .cover__link {
       min-height: 640px;
     }
   }
-  
+
   @media screen and (max-width: 999px) {
     .cover__link {
       min-height: 480px;
       padding: 115px 0;
     }
-  
+
     .cover__link::after {
       content: "";
       position: absolute;
@@ -53,34 +53,35 @@
       min-height: 480px;
     }
   }
-  
+
   @media screen and (max-width: 665px) {
     .cover__link {
       min-height: 480px;
       padding: 115px 0;
     }
-  
+
     .cover__link::after {
       content: "";
       position: absolute;
       top: 0;
       left: 0;
-      min-height: 480px;
+      min-height: 100%;
     }
   }
-  
+
+
   @media screen and (max-width: 470px) {
     .cover__link {
       min-height: 200px;
       padding: 33px 16px;
     }
-  
+
     .cover__link::after {
       content: "";
       position: absolute;
       top: 0;
       left: 0;
-      min-height: 216px;
     }
   }
-  
+
+
